--- a/fullstack-project/package.json
+++ b/fullstack-project/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "debug": "^4.1.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "hbs": "^4.0.4",
     "http-errors": "^1.7.3",
     "mongoose": "^=5.6.13",
