--- a/fullstack-project/package.json
+++ b/fullstack-project/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.15.0",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
