--- a/fullstack-project/package.json
+++ b/fullstack-project/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "0.11.0",
+    "nodemailer": "^6.3.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
